# Resumes-analyzer

./: .gitignore  IMPLEMENTATION_GUIDE.md  IMPLEMENTATION_SUMMARY.md  PERFORMANCE_ANALYSIS.md  PHASE_1_IMPLEMENTATION.md  PROJECT_STRUCTURE_REVIEW.md  QUICK_TROUBLESHOOTING.md  RESUME_EXTRACTION_IMPROVEMENTS.md  SOLUTION_SUMMARY.md  api.py  check_db.py  fix_locations.py  fix_names.py  force_clean.py  implementation_plan.md  main.py  portal.html  pyproject.toml  requirements.txt  resume_extraction_system_review.md  run_app.py  test_extraction.py
deploy/SoftwizApp/Resumes-analyzer/: .gitignore  README.md  api.py  main.py  migrate_db.py  pyproject.toml  requirements.txt  run_app.py  test_extraction.py
deploy/SoftwizApp/Resumes-analyzer/backend/: api.py  indeed_resume_pipeline.py
deploy/SoftwizApp/Resumes-analyzer/services/: __init__.py
deploy/SoftwizApp/hrms/backend/: HCNETSDK_IMPLEMENTATION_SUMMARY.md  HCNETSDK_SETUP.md  alembic.ini  check_db_schema.py  hrms-backend.spec  pyproject.toml  requirements.txt  scratch_test_db2.py  test_cameras_api.py  test_cv2.py  test_rtsp_dvr.py  update_camera_to_hcnetsdk.py
deploy/SoftwizApp/hrms/backend/alembic/: env.py
deploy/SoftwizApp/hrms/backend/alembic/versions/: 002_add_leave_response_comment.py  003_add_letter_replies.py  004_app_notifications_onboarding.py  007_unique_payslip_employee_period.py  008_add_employee_bank_branch_name.py  011_employee_marital_status.py  012_merge_heads.py  013_add_daily_status_reports.py  014_add_push_subscriptions.py  015_add_dsr_reminder_schedule.py  (+2 more)
deploy/SoftwizApp/hrms/backend/app/: __init__.py  main.py
deploy/SoftwizApp/hrms/backend/chromadb_backup_20260526_104539/: chroma.sqlite3
deploy/SoftwizApp/hrms/backend/frontend_build/: index.html
deploy/SoftwizApp/hrms/backend/scratch/: apply_indexes.py  check_march_30.py
deploy/SoftwizApp/hrms/backend/scripts/: create_cameras_table.py  create_tables.py  reset_leave_data.py  reset_password.py
(+318 files in other folders)
