[project]
name = "attendance-hrms-backend"
version = "1.0.0"
description = "Attendance & HRMS backend (FastAPI + PostgreSQL)"
requires-python = ">=3.10"
dependencies = [
  "fastapi>=0.109.0",
  "uvicorn[standard]>=0.27.0",
  "sqlalchemy>=2.0.0",
  "psycopg2-binary>=2.9.9",
  "alembic>=1.13.0",
  "python-jose[cryptography]>=3.3.0",
  "passlib[bcrypt]>=1.7.4",
  "bcrypt<4",
  "python-multipart>=0.0.6",
  "pydantic>=2.5.0",
  "pydantic-settings>=2.1.0",
  "python-dotenv>=1.0.0",
  "jinja2>=3.1.0",
  "openpyxl>=3.1.0",
  "tomli; python_version < \"3.11\"",
]

[project.optional-dependencies]
build = [
  "pyinstaller>=6.0.0",
]

[tool.uvicorn]
factory = false

